[package]
name = "chipterm"
version = "0.1.0"
authors = ["alexunix <alexunix@yandex-team.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
lazy_static = "1.4.0"
rand = "0.8.3"
signal-hook = "0.3.8"
structopt = "0.3.21"
termion = "1.5.6"
tui = "0.14.0"
